--- a/index.html
+++ b/index.html
@@ -114,8 +114,48 @@
         document.getElementById("result").textContent = "⚠️ This time is deemed unrealistic. Please check your entry.";
         document.getElementById("result").classList.add("text-red-600");
       } else if (userTime < fastestAllowedTime) {
-        document.getElementById("result").textContent = `You're classified as: Alien - consider getting a real race car ! :)`;
+        const result = classify(track, carClass, lapTime);
         document.getElementById("result").classList.remove("text-red-600");
+
+        const resultIndex = [
+          "Rookie",
+          "AM",
+          "high end - AM",
+          "Pro",
+          "Alien"
+        ].indexOf(result.split(" - ")[0]);
+
+        const classCount = 5;
+        const proThreshold = thresholds[classCount - 2];
+        const highAmThreshold = thresholds[classCount - 3];
+        const amThreshold = thresholds[classCount - 4];
+
+        let comparisonText = "";
+        if (resultIndex !== 3) {
+          const deltaToPro = (userTime - proThreshold).toFixed(3);
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds ${deltaToPro > 0 ? 'slower than' : 'faster than'} the Pro threshold.`;
+        } else {
+          const deltaToPro = (userTime - proThreshold).toFixed(3);
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds inside the current threshold for your pace.`;
+        }
+
+        if (resultIndex !== 2) {
+          const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds ${deltaToHighAm > 0 ? 'slower than' : 'faster than'} the High-end AM threshold.`;
+        } else {
+          const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds inside the current threshold for your pace.`;
+        }
+
+        if (resultIndex !== 1) {
+          const deltaToAm = (userTime - amThreshold).toFixed(3);
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds ${deltaToAm > 0 ? 'slower than' : 'faster than'} the AM threshold.`;
+        } else {
+          const deltaToAm = (userTime - amThreshold).toFixed(3);
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds inside the current threshold for your pace.`;
+        }
+
+        document.getElementById("result").innerHTML = `<strong>You're classified as:</strong> ${result}${comparisonText}<br><br><span class='text-sm text-blue-700 italic'>🧠 Want to level up? Focus on one sector per session. Small gains = big wins!</span>`;
         document.getElementById("simgridPromo").classList.remove("hidden");
       } else {
         const result = classify(track, carClass, lapTime);
@@ -147,6 +187,7 @@ if (resultIndex !== 2) {
 } else {
   const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
   comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds inside the current threshold for your pace.`;
+}
 }
 if (resultIndex !== 1) {
   const deltaToAm = (userTime - amThreshold).toFixed(3);
