--- a/index.html
+++ b/index.html
@@ -132,11 +132,13 @@
 
         let comparisonText = "";
         if (resultIndex !== 3) {
-          const deltaToPro = (userTime - proThreshold).toFixed(3);
-          comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds ${userTime < proThreshold ? 'faster than' : 'slower than'} the Pro threshold.`;
-        } else {
-          const deltaToPro = (userTime - proThreshold).toFixed(3);
-          comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds inside the current threshold for your pace.`;
+  const deltaToPro = (userTime - proThreshold).toFixed(3);
+  comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds ${deltaToPro > 0 ? 'slower than' : 'faster than'} the Pro threshold.`;
+} else {
+  const deltaToPro = (userTime - proThreshold).toFixed(3);
+  comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds inside the current threshold for your pace.`;
+}
+} seconds inside the current threshold for your pace.`;
         }
 
         if (resultIndex !== 2) {
