--- a/index.html
+++ b/index.html
@@ -136,51 +136,16 @@
   comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds ${deltaToPro > 0 ? 'slower than' : 'faster than'} the Pro threshold.`;
 } else {
   const deltaToPro = (userTime - proThreshold).toFixed(3);
-  comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)
+  comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds inside the current Pro threshold for your pace.`;
 }
-} seconds inside the current threshold for your pace.`;
         }
 
         if (resultIndex !== 2) {
-          const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
-          comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds ${userTime < highAmThreshold ? 'faster than' : 'slower than'} the High-end AM threshold.`;
-        } else {
-          const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
-          comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds inside the current threshold for your pace.`;
-        }
-
-        if (resultIndex !== 1) {
-          const deltaToAm = (userTime - amThreshold).toFixed(3);
-          comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds ${userTime < amThreshold ? 'faster than' : 'slower than'} the AM threshold.`;
-        } else {
-          const deltaToAm = (userTime - amThreshold).toFixed(3);
-          comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds inside the current threshold for your pace.`;
-        }
-
-        document.getElementById("result").innerHTML = `<strong>You're classified as:</strong> ${result}${comparisonText}<br><br><span class='text-sm text-blue-700 italic'>🧠 Want to level up? Focus on one sector per session. Small gains = big wins!</span>`;
-        document.getElementById("simgridPromo").classList.remove("hidden");
-      } else {
-        const result = classify(track, carClass, lapTime);
-        document.getElementById("result").classList.remove("text-red-600");
-        const resultIndex = [
-  "Rookie",
-  "AM",
-  "high end - AM",
-  "Pro",
-  "Alien"
-].indexOf(result.split(" - ")[0]);
-const classCount = 5; // number of total ranks in classes
-const proThreshold = thresholds[classCount - 2];
-const highAmThreshold = thresholds[classCount - 3];
-const amThreshold = thresholds[classCount - 4];
-
-let comparisonText = "";
-if (resultIndex !== 3) {
-  const deltaToPro = (userTime - proThreshold).toFixed(3);
-  comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds ${deltaToPro > 0 ? 'slower than' : 'faster than'} the Pro threshold.`;
+  const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
+  comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds ${deltaToHighAm > 0 ? 'slower than' : 'faster than'} the High-end AM threshold.`;
 } else {
-  const deltaToPro = (userTime - proThreshold).toFixed(3);
-  comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds inside the current threshold for your pace.`;
+  const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
+  comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds inside the current High-end AM threshold for your pace.`;
 }
 }
 if (resultIndex !== 2) {
@@ -196,7 +161,7 @@ if (resultIndex !== 1) {
   comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds ${deltaToAm > 0 ? 'slower than' : 'faster than'} the AM threshold.`;
 } else {
   const deltaToAm = (userTime - amThreshold).toFixed(3);
-  comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds inside the current threshold for your pace.`;
+  comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds inside the current AM threshold for your pace.`;
 }
 } else {
   const deltaToAm = (userTime - amThreshold).toFixed(3);
