--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         if (resultIndex === 3) {
           comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds inside the current Pro threshold for your pace.`;
         } else {
-          comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds ${deltaToPro > 0 ? 'slower than' : 'faster than'} the Pro threshold.`;
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds ${deltaToPro < 0 ? 'slower than' : 'faster than'} the Pro threshold.`;
         }
 
         // High-end AM
@@ -146,7 +146,7 @@
         if (resultIndex === 2) {
           comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds inside the current High-end AM threshold for your pace.`;
         } else {
-          comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds ${deltaToHighAm > 0 ? 'slower than' : 'faster than'} the High-end AM threshold.`;
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds ${deltaToHighAm < 0 ? 'slower than' : 'faster than'} the High-end AM threshold.`;
         }
 
         // AM
@@ -154,7 +154,7 @@
         if (resultIndex === 1) {
           comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds inside the current AM threshold for your pace.`;
         } else {
-          comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds ${deltaToAm > 0 ? 'slower than' : 'faster than'} the AM threshold.`;
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds ${deltaToAm < 0 ? 'slower than' : 'faster than'} the AM threshold.`;
         }
 
         document.getElementById("result").innerHTML = `<strong>You're classified as:</strong> ${result}${comparisonText}<br><br><span class='text-sm text-blue-700 italic'>🧠 Want to level up? Focus on one sector per session. Small gains = big wins!</span>`;
