--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -2,196 +2,204 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IFWL F1 Leaderboard</title>
   <style>
     body {
-      margin:0; padding:20px;
-      font-family:Arial,sans-serif;
-      background:url('ifwl_bg.webp')no-repeat center center fixed;
-      background-size:cover;
+      font-family: Arial, sans-serif;
+      background: url('ifwl_bg.webp') no-repeat center center fixed;
+      background-size: cover;
+      margin: 0; padding: 20px;
     }
-    h1,h2 {
-      text-align:center; color:#000; margin:8px 0;
+    h1, h2 {
+      text-align: center; color: #000;
     }
     .version {
-      position:fixed; top:10px; left:10px;
-      background:rgba(255,255,255,0.7); padding:2px 6px;
-      font-size:0.8em; border-radius:4px;
+      position: fixed; top: 10px; left: 10px;
+      font-size: 0.8em; color: #ccc;
     }
     .header {
-      display:flex; align-items:center; justify-content:center;
-      gap:20px; margin-bottom:10px;
+      display: flex; align-items: center;
+      justify-content: center; gap: 20px;
+      margin-bottom: 10px;
     }
-    .header img { height:48px; }
-    .join-series { text-align:center; margin:12px 0; }
-    .join-series a {
-      background:#1B1443; color:#fff; text-decoration:none;
-      padding:10px 20px; border-radius:4px; font-weight:bold;
+    .header img { height: 48px; }
+    .btn {
+      display: inline-block;
+      margin: 0 auto 10px;
+      padding: 8px 16px;
+      background: #222;
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 4px;
     }
     table {
-      width:100%; border-collapse:collapse;
-      background:rgba(0,0,0,0.75); margin:20px 0;
-      border-radius:8px; overflow:hidden; color:#fff;
+      width: 100%; border-collapse: collapse;
+      background: rgba(0,0,0,0.75);
+      margin: 20px 0; border-radius:8px; overflow:hidden;
+      color:white;
     }
     th, td {
-      padding:10px; text-align:center;
-      border-bottom:1px solid #333;
+      padding:10px; text-align:center; border-bottom:1px solid #333;
     }
     th {
-      background:#333; text-transform:uppercase; font-weight:bold;
+      background:#333; text-transform:uppercase;
+      font-weight:bold; color:#fff;
     }
-    tr:hover { background:rgba(255,255,255,0.1); }
-
-    /* car & logo images */
+    tr:hover { background: rgba(255,255,255,0.05); }
+    .driver-number {
+      font-size: 1.5em;
+      font-style: italic;
+      font-weight: bold;
+      margin-right: 8px;
+    }
     img.car {
-      height:48px; vertical-align:middle; margin:0 8px 0 0;
+      height: 48px;
+      vertical-align: middle;
+      margin-right: 8px;
     }
     img.logo {
-      height:40px; float:right; margin-left:10px;
-      opacity:1!important; filter:none!important;
+      height: 48px;
+      margin-left: 12px;
+    }
+    .team-cell {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
     }
 
-    /* driver number badge now just text */
-    .driver-cell {
-      display:flex; align-items:center; justify-content:flex-start;
-      gap:8px;
-    }
-    .driver-number {
-      font-size:2em; font-weight:bold; font-style:italic;
-      color:#fff; /* remove background/padding */
-    }
-
-    /* Team Colours */
-    .team-ALPINE         { background-color:#0090FF; }
-    .team-ASTON-MARTIN  { background-color:#004940; }
-    .team-KICK-SAUBER   { background-color:#000000; }
-    .team-RED-BULL-RACING,
-    .team-RACING-BULLS  { background-color:#1B1443; }
-    .team-MERCEDES      { background-color:#00D2BE; }
-    .team-MCLAREN       { background-color:#FF8700; }
-    .team-FERRARI       { background-color:#DC0000; }
-    .team-HAAS          { background-color:#B6BABD; }
-    .team-WILLIAMS      { background-color:#005AFF; }
-    .team-RESERVE       { background-color:#FFFFFF; color:#000; }
+    /* Team row background-colours */
+    .team-ALPINE          { background-color: #0090FF; }
+    .team-ASTON\ MARTIN  { background-color: #004940; }
+    .team-FERRARI        { background-color: #DC0000; }
+    .team-HAAS           { background-color: #B6BABD; color:#000; }
+    .team-KICK\ SAUBER   { background-color: #000000; }
+    .team-MCLAREN        { background-color: #FF8700; }
+    .team-MERCEDES       { background-color: #00D2BE; }
+    .team-RACING\ BULLS,
+    .team-RED\ BULL\ RACING { background-color: #1B1443; }
+    .team-WILLIAMS       { background-color: #005AFF; }
+    .team-RESERVE        { background-color: #FFFFFF; color: #000; }
   </style>
 </head>
 <body>
 
-  <div class="version">Version: Beta 0.0.40 (Badgeless Number)</div>
-
+  <div class="version">Version: Beta 0.0.39</div>
   <div class="header">
-    <img src="ifwl_logo.png" alt="IFWL Logo"/>
+    <img src="ifwl_logo.png" alt="IFWL Logo" />
     <h1>IFWL F1 Leaderboard</h1>
-    <img src="ifwl_logo.png" alt="IFWL Logo"/>
+    <img src="ifwl_logo.png" alt="IFWL Logo" />
   </div>
 
-  <div class="join-series">
-    <a href="https://www.thesimgrid.com/championships/15239" target="_blank">
-      Join our latest series here
-    </a>
-  </div>
+  <a href="https://www.thesimgrid.com/championships/15239" class="btn" target="_blank">Join our latest series here</a>
 
   <h2>Driver Standings</h2>
   <table id="driver-table">
-    <thead>
-      <tr><th>DRIVER</th><th>TEAM</th><th>TOTAL POINTS</th></tr>
-    </thead>
+    <thead><tr><th>Driver</th><th>Team</th><th>Total Points</th></tr></thead>
     <tbody></tbody>
   </table>
 
   <h2>Constructors Standings</h2>
   <table id="constructor-table">
-    <thead>
-      <tr><th>TEAM</th><th>TOTAL POINTS</th></tr>
-    </thead>
+    <thead><tr><th>Team</th><th>Total Points</th></tr></thead>
     <tbody></tbody>
   </table>
 
   <h2>Unassigned Drivers</h2>
   <table id="unassigned-table">
-    <thead><tr><th>DRIVER</th></tr></thead>
+    <thead><tr><th>Driver</th></tr></thead>
     <tbody></tbody>
   </table>
 
-  <script>
-    const sheetId = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
-    const teamCars = {
-      ALPINE:"ALPINE.webp","ASTON MARTIN":"ASTON.webp",FERRARI:"FERRARI.webp",
-      HAAS:"HAAS.webp",MCLAREN:"MCLAREN.webp",MERCEDES:"MERCEDES.webp",
-      "RACING BULLS":"RACINGBULLS.webp","RED BULL RACING":"RBR.webp",
-      "KICK SAUBER":"SAUBER.webp",RESERVE:"RESERVE.webp",WILLIAMS:"WILLIAMS.webp"
-    };
-    const teamLogos = {
-      ALPINE:"ALPINELOGO.webp","ASTON MARTIN":"ASTONLOGO.webp",FERRARI:"FERARRILOGO.webp",
-      HAAS:"HAASLOGO.webp",MCLAREN:"MCLARENLOGO.webp",MERCEDES:"MERCEDESLOGO.webp",
-      "RACING BULLS":"RBLOGO.webp","RED BULL RACING":"RBRLOGO.webp",
-      "KICK SAUBER":"KICKLOGO.webp",RESERVE:"RESERVELOGO.webp",WILLIAMS:"WILLIAMSLOGO.webp"
-    };
-    const safeClass = t=>"team-"+t.replace(/\s+/g,"-");
+<script>
+  const sheetId = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
+  const teamCars = {
+    "ALPINE":          "ALPINE.webp",
+    "ASTON MARTIN":    "ASTON.webp",
+    "FERRARI":         "FERRARI.webp",
+    "HAAS":            "HAAS.webp",
+    "MCLAREN":         "MCLAREN.webp",
+    "MERCEDES":        "MERCEDES.webp",
+    "RACING BULLS":    "RACINGBULLS.webp",
+    "RED BULL RACING": "RBR.webp",
+    "KICK SAUBER":     "SAUBER.webp",
+    "RESERVE":         "RESERVE.webp",
+    "WILLIAMS":        "WILLIAMS.webp"
+  };
+  const teamLogos = {
+    "ALPINE":          "ALPINELOGO.webp",
+    "ASTON MARTIN":    "ASTONLOGO.webp",
+    "FERRARI":         "FERARRILOGO.webp",
+    "HAAS":            "HAASLOGO.webp",
+    "MCLAREN":         "MCLARENLOGO.webp",
+    "MERCEDES":        "MERCEDESLOGO.webp",
+    "RACING BULLS":    "RBLOGO.webp",
+    "RED BULL RACING": "RBRLOGO.webp",
+    "KICK SAUBER":     "KICKLOGO.webp",
+    "RESERVE":         "RESERVELOGO.webp",
+    "WILLIAMS":        "WILLIAMSLOGO.webp"
+  };
 
-    fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`)
-      .then(r=>r.text())
-      .then(t=>JSON.parse(t.substr(47).slice(0,-2)))
-      .then(j=>{
-        const rows = j.table.rows.map(r=>r.c.map(c=>c?.v||""));
-        const dBody = document.querySelector("#driver-table tbody");
-        const cBody = document.querySelector("#constructor-table tbody");
-        const uBody = document.querySelector("#unassigned-table tbody");
-        dBody.innerHTML=cBody.innerHTML=uBody.innerHTML="";
-        const totals = {};
+  fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`)
+    .then(r=>r.text())
+    .then(t=>JSON.parse(t.substr(47).slice(0,-2)))
+    .then(json=>{
+      const rows = json.table.rows.map(r=>r.c.map(c=>c?.v||""));
+      const driverBody = document.querySelector("#driver-table tbody");
+      const constructorBody = document.querySelector("#constructor-table tbody");
+      const unassignedBody = document.querySelector("#unassigned-table tbody");
+      const constructors = {};
 
-        rows.forEach(r=>{
-          const raw  = (r[0]||"")+"";
-          if(!raw) return;
-          const pts  = parseInt(r[18])||0;
-          const team = (r[1]||"")+"";
-          // detect number in [NN]
-          const m    = raw.match(/\[\s*(\d+)\s*\]/);
-          const num  = m? m[1] : "";
-          const name = raw.replace(/\[\s*\d+\s*\]\s*-\s*/,"");
-          if(!team.trim()){
-            uBody.innerHTML+=`<tr><td>${name}</td></tr>`;
-            return;
-          }
-          totals[team] = (totals[team]||0)+pts;
-          const U    = team.toUpperCase();
-          const cls  = safeClass(U);
-          const car  = teamCars[U]   || "";
-          const logo = teamLogos[U]  || "";
+      rows.forEach(r=>{
+        let [rawDriver, team,,,,,,,,,,,,,,,,,, points] = r;
+        if(!rawDriver) return;
+        // parse [NNN] - name
+        let num = "", name = rawDriver;
+        const m = rawDriver.match(/^\s*\[(\d+)\]\s*-\s*(.+)$/);
+        if(m){ num = m[1]; name = m[2]; }
+        if(!team){
+          const tr = document.createElement("tr");
+          tr.innerHTML = `<td>${name}</td>`;
+          return unassignedBody.appendChild(tr);
+        }
+        const key = team.toUpperCase().trim();
+        // accumulate constructors
+        constructors[key] = (constructors[key]||0) + (parseInt(points)||0);
 
-          const tr   = document.createElement("tr");
-          tr.className = cls;
-          tr.innerHTML=`
-            <td>${name}</td>
-            <td class="driver-cell">
-              ${num?`<span class="driver-number">${num}</span>`:""}
-              <img src="${car}" class="car" alt="${team}"/>
-              ${team}
-              <img src="${logo}" class="logo" alt="${team}"/>
-            </td>
-            <td>${pts}</td>`;
-          dBody.appendChild(tr);
-        });
-
-        Object.entries(totals).forEach(([team,pts])=>{
-          const U    = team.toUpperCase();
-          const cls  = safeClass(U);
-          const car  = teamCars[U]   || "";
-          const logo = teamLogos[U]  || "";
-          const tr   = document.createElement("tr");
-          tr.className = cls;
-          tr.innerHTML=`
-            <td class="driver-cell">
-              <img src="${car}" class="car" alt="${team}"/>
-              ${team}
-              <img src="${logo}" class="logo" alt="${team}"/>
-            </td>
-            <td>${pts}</td>`;
-          cBody.appendChild(tr);
-        });
+        // build driver row
+        const tr = document.createElement("tr");
+        tr.className = `driver-row team-${key.replace(/ /g,"\\ ")}`;
+        tr.innerHTML = `
+          <td>${name}</td>
+          <td class="team-cell">
+            ${ num ? `<span class="driver-number">${num}</span>` : "" }
+            <img src="${teamCars[key]}" class="car"   alt="${team}"/>
+            ${team}
+            <img src="${teamLogos[key]}" class="logo" alt="${team}"/>
+          </td>
+          <td>${parseInt(points)||0}</td>`;
+        driverBody.appendChild(tr);
       });
-  </script>
 
+      // constructors table
+      Object.entries(constructors)
+        .sort((a,b)=>b[1]-a[1])
+        .forEach(([team,pts])=>{
+          const tr = document.createElement("tr");
+          const key = team.toUpperCase();
+          tr.className = `driver-row team-${key.replace(/ /g,"\\ ")}`;
+          tr.innerHTML = `
+            <td class="team-cell">
+              <img src="${teamCars[key]}" class="car" alt="${team}"/>
+              ${team}
+              <img src="${teamLogos[key]}" class="logo" alt="${team}"/>
+            </td>
+            <td>${pts}</td>`;
+          constructorBody.appendChild(tr);
+        });
+    })
+    .catch(console.error);
+</script>
 </body>
 </html>
