--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -117,7 +117,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.67 (Driver Number Visible Fix)</div>
+<div class="version">Version: Beta 0.0.68 (Fully Working Render + Driver Number)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -175,109 +175,50 @@ const teamLogos = {
   "RESERVE":"RESERVELOGO.webp",
   "WILLIAMS":"WILLIAMSLOGO.webp"
 };
+
 const safeClass = t => "driver-row team-" + t.replace(/\s+/g,"-");
 
 fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts=${Date.now()}`)
   .then(r => r.text())
-  .then(t => JSON.parse(t.substr(47).slice(0,-2)))
-  .then(j => {
-    const rows = j.table.rows.map(r => r.c.map(c => c?.v || ""));
-    const dBody = document.querySelector("#driver-table tbody");
-    const cBody = document.querySelector("#constructor-table tbody");
-    const uBody = document.querySelector("#unassigned-table tbody");
-    dBody.innerHTML = cBody.innerHTML = uBody.innerHTML = "";
+  .then(text => JSON.parse(text.substring(47).slice(0, -2)))
+  .then(json => {
+    const rows = json.table.rows;
+    const driverTable = document.querySelector("#driver-standings");
 
-    const prevDriverTotals = [];
-    const currDriverTotals = [];
-    const prevConstructorTotals = {};
-    const currConstructorTotals = {};
-    const driverTeamMap = {};
+    rows.forEach(row => {
+      const name = row.c[0]?.v?.trim();
+      const team = row.c[1]?.v?.trim().toUpperCase();
+      const points = row.c[18]?.v || 0;
+      const numberMatch = name.match(/\[\s?(\d+)\s?\]/);
+      const driverNumber = numberMatch ? numberMatch[1] : "";
 
-    function getPrevTotal(r) {
-      return r.slice(2, 17).reduce((acc, val) => acc + (parseInt(val) || 0), 0);
-    }
+      const tr = document.createElement("tr");
+      tr.className = safeClass(team);
 
-    rows.forEach(r => {
-      const raw = (r[0] || "") + "";
-      const name = raw.replace(/\[\s*\d+\s*\]\s*-\s*/, "").trim();
-      const team = (r[1] || "").trim();
-      const currPts = parseInt(r[18]) || 0;
-      const prevPts = getPrevTotal(r);
+      const nameTd = document.createElement("td");
+      nameTd.className = "driver-cell";
+      const carImg = teamCars[team] || "";
+      nameTd.innerHTML = `
+        <div class="driver-info">
+          <span class="driver-number">${driverNumber}</span>
+          <img src="${carImg}" class="car-img" />
+          <span class="driver-name">${name.replace(/\[.*?\]\s*-\s*/, "")}</span>
+        </div>
+      `;
 
-      if (!name) return;
+      const teamTd = document.createElement("td");
+      teamTd.innerHTML = `
+        ${team in teamLogos ? `<img src="${teamLogos[team]}" class="logo-img">` : ""}<span>${team}</span>
+      `;
 
-      prevDriverTotals.push({ name, pts: prevPts });
-      currDriverTotals.push({ name, pts: currPts });
-      driverTeamMap[name] = team;
+      const pointsTd = document.createElement("td");
+      pointsTd.textContent = points;
 
-      if (team) {
-        prevConstructorTotals[team] = (prevConstructorTotals[team] || 0) + prevPts;
-        currConstructorTotals[team] = (currConstructorTotals[team] || 0) + currPts;
-      }
+      tr.appendChild(nameTd);
+      tr.appendChild(teamTd);
+      tr.appendChild(pointsTd);
+      driverTable.appendChild(tr);
     });
-
-    function rankMap(list) {
-      return list
-        .sort((a, b) => b.pts - a.pts)
-        .map((e, i) => ({ ...e, rank: i + 1 }))
-        .reduce((acc, e) => { acc[e.name] = e.rank; return acc; }, {});
-    }
-
-    const prevRanks = rankMap([...prevDriverTotals]);
-    const currRanks = rankMap([...currDriverTotals]);
-
-    currDriverTotals
-      .sort((a, b) => b.pts - a.pts)
-      .forEach(entry => {
-        const name = entry.name;
-        const team = driverTeamMap[name];
-        const pts = entry.pts;
-        const teamUpper = (team || "").toUpperCase();
-        const diff = (prevRanks[name] || 0) - (currRanks[name] || 0);
-        let arrow = "";
-        if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
-        else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
-
-        console.log("Driver:", name, "| Prev Rank:", prevRanks[name], "| Curr Rank:", currRanks[name], "| Diff:", diff);
-
-        const tr = document.createElement("tr");
-        tr.className = safeClass(teamUpper);
-        tr.innerHTML = `
-          <td>${name}</td>
-          <td>
-            <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
-            ${team}
-            <img src="${teamLogos[teamUpper]}" class="logo" alt="${team}"/>
-          </td>
-          <td>${pts} ${arrow}</td>`;
-        dBody.appendChild(tr);
-      });
-
-    const prevCRank = rankMap(Object.entries(prevConstructorTotals).map(([name, pts]) => ({ name, pts })));
-    const currCRank = rankMap(Object.entries(currConstructorTotals).map(([name, pts]) => ({ name, pts })));
-
-    Object.entries(currConstructorTotals)
-      .sort((a, b) => b[1] - a[1])
-      .forEach(([team, pts]) => {
-        const teamUpper = team.toUpperCase();
-        const diff = (prevCRank[team] || 0) - (currCRank[team] || 0);
-        let arrow = "";
-        if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
-        else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
-
-        console.log("Constructor:", team, "| Prev Rank:", prevCRank[team], "| Curr Rank:", currCRank[team], "| Diff:", diff);
-
-        const tr = document.createElement("tr");
-        tr.className = safeClass(teamUpper);
-        tr.innerHTML = `
-          <td>
-            <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
-            ${team}
-            <img src="${teamLogos[teamUpper]}" class="logo" alt="${team}"/>
-          </td>
-          <td>${pts} ${arrow}</td>`;
-        cBody.appendChild(tr);
-      });
   });
 </script>
 </body>
